<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.flexit.BMIActivity"
    tools:showIn="@layout/activity_bmi">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="5dp"
        android:smoothScrollbar="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="19dp"
            android:paddingBottom="19dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/border_shadow">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="#bababa"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:padding="11dp"
                    android:textSize="19sp"
                    android:layout_weight="1"  />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/weight"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:text="@string/pound"
                    android:textColor="#468f58"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:padding="11dp"
                    android:textSize="19sp"
                    android:layout_weight="1"  />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/height"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="11dp"
                    android:text="@string/Inch"
                    android:textColor="#468f58"
                    android:textSize="19sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:background="#FFBABABA"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="49dp"
                    android:text="@string/reset"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:id="@+id/BMIReset"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#FFBABABA"/>

            <TextView
                android:id="@+id/resultView"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="#d6d6d3"
                android:padding="10dp"
                android:text="@string/_0_0"
                android:textAlignment="center"
                android:textColor="#fefeff"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="#FFBABABA"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"  >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="19sp"
                    android:text="@string/underweight"
                    android:gravity="center"
                    android:textColor="#48acda"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/hyphen"
                    android:gravity="center"
                    android:textColor="#48acda"
                    android:id="@+id/underweightView"
                    android:padding="6dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:textSize="19sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/normal"
                    android:textColor="#42cd3a"
                    android:padding="6dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/normalView"
                    android:textColor="#42cd3a"
                    android:padding="6dp"
                    android:text="@string/hyphen" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="#F30BDE"
                    android:text="@string/overweight"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/overweightView"
                    android:textColor="#F30BDE"
                    android:padding="6dp"
                    android:text="@string/hyphen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="19sp"
                    android:gravity="center"
                    android:textColor="#ff9900"
                    android:text="@string/obese"
                    android:padding="6dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/obeseView"
                    android:textColor="#ff9900"
                    android:padding="6dp"
                    android:text="@string/hyphen" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="19sp"
                    android:gravity="center"
                    android:textColor="#ff0400"
                    android:text="@string/morbidly_obese"
                    android:padding="6dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/morobese"
                    android:textColor="#eb0400"
                    android:padding="6dp"
                    android:textSize="18sp"
                    android:text="@string/hyphen" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="#FFBABABA"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
