<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.flexit.BMIActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="5dp"
        android:smoothScrollbar="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="19dp"
            android:paddingBottom="19dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/border_shadow">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="#bababa"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:padding="11dp"
                    android:textSize="19sp"
                    android:layout_weight="1"  />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/weighttview"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:text="@string/pound"
                    android:textColor="#468f58"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:padding="11dp"
                    android:textSize="19sp"
                    android:layout_weight="1"  />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/heightview"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="11dp"
                    android:text="@string/Inch"
                    android:textColor="#468f58"
                    android:textSize="19sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:background="#FFBABABA"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="49dp"
                    android:text="RUN BMI CALCULATIONS"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:id="@+id/run_bmi"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#FFBABABA"/>


            <TextView
                android:id="@+id/resultView"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="#d6d6d3"
                android:padding="10dp"
                android:text="0.0"
                android:textAlignment="center"
                android:textColor="#161111"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="#FFBABABA"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="377dp"
                android:layout_height="49dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="#d6d6d3"
                android:padding="10dp"
                android:text="---"
                android:textAlignment="center"
                android:textColor="#161111"
                android:textSize="18sp"
></TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"  >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="19sp"
                    android:text="@string/underweight"
                    android:gravity="center"
                    android:textColor="#0CABF3"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/underweightView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/normalbmi"
                    android:textColor="#056C99"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:textSize="19sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/normal"
                    android:textColor="#13AA0C"
                    android:padding="6dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/normalView"
                    android:textColor="#0C9200"
                    android:padding="6dp"
                    android:text="less than 25" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="#A51496"
                    android:text="@string/overweight"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/overweightView"
                    android:textColor="#7E0470"
                    android:padding="6dp"
                    android:text="less 30" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="19sp"
                    android:gravity="center"
                    android:textColor="#CE9C06"
                    android:text="@string/obese"
                    android:padding="6dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/obeseView"
                    android:textColor="#E09200"
                    android:padding="6dp"
                    android:text="greater than 30" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="19sp"
                    android:gravity="center"
                    android:textColor="#CF0920"
                    android:text="@string/morbidly_obese"
                    android:padding="6dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/morobese"
                    android:textColor="#570000"
                    android:padding="6dp"
                    android:textSize="18sp"
                    android:text="greater than 30" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="#FFBABABA"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
